--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,6 +1,7 @@
 [settings]
 line_length=9999
 known_django=django
-known_djangoaddons=
-sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,DJANGOADDONS,LOCALFOLDER
+known_dmu=django_modular_user
+known_localfolder=
+sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,DMU,LOCALFOLDER
 default_section=THIRDPARTY
